Update checkbox style and size in index.html

--- a/index.html
+++ b/index.html
@@ -279,7 +279,8 @@
                 <div class="glass-effect rounded-lg sm:rounded-xl p-3 sm:p-4">
                     <div class="flex items-center justify-between mb-3 sm:mb-4">
                         <div class="flex items-center">
-                            <input type="checkbox" id="margin" class="w-4 h-4 sm:w-5 sm:h-5 text-white mr-2 sm:mr-3" style="accent-color: #ffffff;">
+                            <!-- CHECKBOX CORREGIDO: más grande y con color vino -->
+                            <input type="checkbox" id="margin" class="w-5 h-5 sm:w-5 sm:h-5 mr-2 sm:mr-3" style="accent-color: #810A2D;">
                             <label for="margin" class="text-sm text-white/90 cursor-pointer mobile-text-sm sm:text-sm">
                                 Añadir 10% de margen de seguridad
                                 <span class="text-white ml-1">*</span>
