--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                 <!-- Mensaje informativo en negrita -->
                 <div class="info-message">
                     <i class="fas fa-info-circle mr-2 text-white"></i>
-                    <span class="font-bold text-white">Vendemos a partir de media piel (25 pies aprox.)</span>
+                    <span class="font-bold text-white">Vendemos a partir de media piel (25 pies cuadrados aprox.)</span>
                 </div>
 
                 <!-- Botón de calcular -->
